--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
   <artifactId>SpringBootSourceCode</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+    <modules>
+        <module>CqwSpringBootApplication</module>
+      <module>UserCode</module>
+    </modules>
+    <version>1.0-SNAPSHOT</version>
   <name>SpringBootSourceCode Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
